tests/extra_alignment_to_cr.expected
File: extra_alignment_to_cr.tex

Error on line 7: There are more &'s than should be in a aligned environment (table, etc.) near Foo &.
