tests/extra_alignment_to_cr.tex
\documentclass{article}

\begin{document}

\begin{table}
  \begin{tabular}{c}
    Foo & Bar \\
  \end{tabular}
\end{table}

\end{document}
